--- a/my-app/src/Companents/Advantages/Advantages.css
+++ b/my-app/src/Companents/Advantages/Advantages.css
@@ -1,7 +1,7 @@
 .advmb-body{
     width: 100%;
     height: 500px;
-    /* background-image: url('../../assets/advantagesImg/advmbbgImg.png'); */
+    background-image: url('../../assets/advantagesImg/advmbbgImg.png');
     background-color: #474747;
     background-repeat: no-repeat;
     background-position: center;
