--- a/my-app/src/Companents/ServicesComp/Carousel-hair.css
+++ b/my-app/src/Companents/ServicesComp/Carousel-hair.css
@@ -1,5 +1,5 @@
 
-.scmb-carousel {
+/* .scmb-carousel {
   position: relative;
   width: 100%;
   overflow: hidden;
@@ -19,16 +19,16 @@
   padding: 10%;
 
   display: flex;
-  justify-content: center; /* Центрирование слайдов по горизонтали */
-  align-items: center; /* Центрирование слайдов по вертикали */
+  justify-content: center; 
+  align-items: center; 
 }
 .scmb-slide {
   min-width: 80%;
   max-width: 80%;
   padding: 10%;
   display: flex;
-  justify-content: center; /* Центрирование слайдов по горизонтали */
-  align-items: center; /* Центрирование слайдов по вертикали */
+  justify-content: center; 
+  align-items: center; 
 }
 
 
@@ -42,23 +42,9 @@
   height: 260px;
   max-width: 650px;
   min-width: 650px;
-}
-.scmb-item{
+}*/
 
-  height: 100%;
-  background-color: #474747;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  justify-content: center;
-
-  align-self: center;
-  align-items: center;
-  min-width: 191px;
-  max-width: 191px;
-  border-radius: 25px;
-  gap: 16px;
-}
+/*
 .scmb-item-active{
 
   height: 100%;
@@ -76,6 +62,52 @@
   min-width: 191px;
   max-width: 191px;
 }
+
+.scmb-navigation {
+  position: relative;
+  bottom: 10px;
+  width: 100%;
+  height: 60px;
+}
+
+.scmb-dots {
+  display: flex;
+  gap: 20px;
+  justify-content: center; 
+  position: relative;
+  top: 20px;
+}
+
+.scmb-dot {
+  border: 4px solid #474747;
+
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  cursor: pointer;
+  border: 4px solid #474747;
+  width: 7px;
+  height: 7px;
+}
+
+.scmb-dot.active {
+  background-color: #474747;
+} */
+.scmb-item{
+
+  height: 270px;
+  background-color: #474747;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  align-self: center;
+  align-items: center;
+  min-width: 220px;
+  max-width: 220px;
+  border-radius: 25px;
+  gap: 16px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .scmb-item img{
   width: 100%;
 }
@@ -83,6 +115,7 @@
 .scmb-item a{
   color: white;
   font-size: 21px;
+  font-family: 'Montserrat';
 }
 
 .scmb-item button{
@@ -103,39 +136,103 @@
 }
 
 
-.scmb-navigation {
-  position: relative;
-  bottom: 10px;
-  width: 100%;
-  height: 60px;
-}
-
-.scmb-dots {
-  display: flex;
-  gap: 20px;
-  justify-content: center; /* Центрирование точек */
-  position: relative;
-  top: 20px;
-}
-
-.scmb-dot {
-  border: 4px solid #474747;
-
-  background-color: rgb(255, 255, 255);
-  border-radius: 50%;
+.sc-nextslide,
+.sc-prevslide {
+  transform: translateY(-50%);
+  width: 70px; /* Настройте ширину и высоту по вашему усмотрению */
+  height: 80px;
+  background-color: rgba(230, 0, 0, 0); /* Прозрачный черный цвет фона */
+  color: #fff; /* Цвет текста */
   cursor: pointer;
-  border: 4px solid #474747;
-  width: 7px;
-  height: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2; /* Установите z-index, чтобы элементы навигации были поверх слайдов */
+  position: absolute;
+  top: 43%;
+  margin-left: 50px;
+  margin-right: 50px;
+  border: 0;
 }
 
-.scmb-dot.active {
-  background-color: #474747;
+
+.sc-nextslide {
+  right: 10px; /* Поместите элемент вправо */
+}
+.sc-nextslide img{
+  rotate: -90deg;
+}
+.sc-prevslide {
+  left: 10px; /* Поместите элемент влево */
+}
+.sc-prevslide img{
+  rotate: 90deg;
+}
+@media (max-width:600px) {
+  .sc-nextslide,
+.sc-prevslide {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+}
+@media (max-width:440px) {
+  .sc-nextslide,
+.sc-prevslide {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+.sc-dots{
+  gap:15px;
+}
+}
+@media (max-width:390px) {
+  .sc-nextslide,
+  .sc-prevslide {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+  .scmb-item{
+
+    height: 250px;
+    background-color: #474747;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    align-self: center;
+    align-items: center;
+    min-width: 194px;
+    max-width: 194px;
+    border-radius: 25px;
+    gap: 16px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .scmb-item img{
+    width: 100%;
+  }
+  
+  .scmb-item a{
+    color: white;
+    font-size: 19px;
+    font-family: 'Montserrat';
+  }
 }
 
 
-/*______________________________________________*/
 
+
+
+
+
+
+
+
+
+
+
+
+
+/* ____________________________________________________________________ */
 
 .sc-carousel {
   position: relative;
@@ -313,5 +410,54 @@
     border: 4px solid #474747;
     width: 7px;
     height: 7px;
+  }
+}
+@media (max-width:600px) {
+  .sc-nextslide,
+.sc-prevslide {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+}
+@media (max-width:440px) {
+  .sc-nextslide,
+.sc-prevslide {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+.sc-dots{
+  gap:15px;
+}
+}
+@media (max-width:390px) {
+  .sc-nextslide,
+  .sc-prevslide {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+  .scmb-item{
+
+    height: 250px;
+    background-color: #474747;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    align-self: center;
+    align-items: center;
+    min-width: 194px;
+    max-width: 194px;
+    border-radius: 25px;
+    gap: 16px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .scmb-item img{
+    width: 100%;
+  }
+  
+  .scmb-item a{
+    color: white;
+    font-size: 19px;
+    font-family: 'Montserrat';
   }
 }
